--- a/style.css
+++ b/style.css
@@ -107,6 +107,11 @@ main {
     color: var(--white);
 }
 
+.gorjeta .botao-ativo {
+    background-color: var(--light-green);
+    color: var(--green-800);
+}
+
 .gorjeta [type="button"]:hover,
 .resultados button:hover {
     background-color: var(--green-hover);
